# fs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/cli/: main.rs
src/cli/input/: parser.rs
src/core/: errors.rs  fs.rs  mod.rs  query_engine.rs
src/core/db/: loader.rs  mod.rs  vector_db.rs
src/core/file_tree/: file_tree.rs  mod.rs
src/core/ml/: driver.rs  embedding.rs  mod.rs  model.rs
src/input/: parser.rs
src/shared/: io.rs  mod.rs  utils.rs
