[package]
name = "fs"
version = "0.1.0"
edition = "2021"

[lib]
name = "fs"
path = "src/core/mod.rs"
crate-type = ["rlib", "dylib"]

[[bin]]
name = "main"
path = "src/cli/main.rs"

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
rust-bert = "0.21.0"
faiss = { version = "0.12.1", features = [] }
thiserror = "1.0.49"
serde = { version = "1.0.189", features = ["derive"] }
